This is gonna fun fun

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "countries-information",
+  "name": "countries-infomations",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
